--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>청사진</title>
+    <link rel="icon" href="./sources/site_icon.png">
 <!--    CSS선언-->
     <link rel="stylesheet" href="./style/index_style.css">
     <link rel="stylesheet" href="./style/index_keyframe_media.css">
