--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                      <div class="speech-bubbleL bottom-left">어른들께 자퇴 사실을 알렸더니 안 좋은 시선으로 보셔서 움츠러 들어요. <br><span class="small"> | 홍O동(17), 이제 막 자퇴한 학생 | </span></div>
                      <div class="speech-bubbleR bottom-right">학교에서 하는 공모전 같은 대외활동을 혼자 준비하고 참가하기 어려워요. <br><span class="small"> | 홍O동(17), 이제 막 자퇴한 학생 | </span></div>
                      <div class="clear"></div>
-                     <div class="speech-bubbleL bottom-left">자퇴 후 시간 관리가 어려워져서 밤낮도 바뀌었어요. <br><span class="small"> | 똥O지(17), 이제 막 자퇴한 학생 | </span></div>
+                     <div class="speech-bubbleL bottom-left">자퇴 후 시간 관리가 어려워져서 밤낮도 바뀌었어요. <br><span class="small"> | 홍O동(17), 이제 막 자퇴한 학생 | </span></div>
                      <div class="speech-bubbleR bottom-right">학교 시스템에 적응하지 못 해서 자퇴했지만 막상 혼자 공부하려니 어려워요. <br><span class="small"> | 홍O동(17), 이제 막 자퇴한 학생 | </span></div>
                      <div class="clear"></div>
                      <div class="speech-bubbleL bottom-left">진학 상담이나 심리 상담 등을 자유롭게 받을 수 없고 금전적으로 부담돼요. <br><span class="small"> | 홍O동(17), 이제 막 자퇴한 학생 | </span></div>
