--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
 
     </footer>
 </div> <!--wrap-->
-<script src="./js/rellax.js"></script>
+<!-- <script src="./js/rellax.js"></script> -->
 <script src="./js/index_script.js"></script>
 
 </body>
