--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <!--    외부JS라이브러리 선언 >>TypeIt 비영리목적 무료-->
     <script src="https://unpkg.com/typeit@8.7.1/dist/index.umd.js"></script>
-<!--     <script src="https://cdn.jsdelivr.net/gh/dixonandmoe/rellax@master/rellax.min.js"></script> -->
+<!--     <script src="https://cdn.jsdelivr.net/gh/dixonandmoe/rellax@master/rellax.min.js"></script> 안 쓸 거야 -->
 
 
     <!--    WebFonts 선언-->
