--- a/index.html
+++ b/index.html
@@ -399,5 +399,8 @@
 <!-- <script src="./js/rellax.js"></script> -->
 <script src="./js/index_script.js"></script>
 
+
+
+<!--혹시라도 이 코드를 보고 계신다면 부끄러운 감정을 감출 수 없을 것 같습니다-->
 </body>
 </html>
